<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="99dp"
            android:orientation="vertical"
            android:layout_marginLeft="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="13dp"
                android:gravity="center"
                android:textColor="@color/comon_text_black_most"
                android:text="@string/cloudrecharge_cardno_prompt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="13dp"
                android:textColor="@color/comon_text_black_most"
                android:text="@string/cloudrecharge_cardnoagain_prompt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="99dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <EditText
                android:id="@+id/et_cardno"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/input_editext_hinit_style"
                android:paddingLeft="20dp"
                android:hint="@string/cloudrecharge_cardno_input_prompt"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:background="@color/common_line_gray_onepx"/>
            <!--<TextView
                android:id="@+id/tv_cardtype"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/cloudrecharge_cardtype_input_prompt"
                android:textColor="@color/input_editext_hinit"
                android:drawableRight="@drawable/aty_cloudrechargecard_rightarrow"
                android:paddingRight="22dp"
                android:clickable="true"/>-->
            <EditText
                android:id="@+id/et_cardnoagain"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/input_editext_hinit_style"
                android:paddingLeft="20dp"
                android:hint="@string/cloudrecharge_cardno_inputagain_prompt"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/common_background_gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="15dp"
        android:text="@string/cloudrecharge_money_prompt"
        android:textColor="@color/comon_text_black_most"/>
    <GridView
        android:id="@+id/gvmoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:numColumns="3"
        android:verticalSpacing="20dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="15dp"
        android:text="@string/cloudrecharge_paytype"
        android:textColor="@color/comon_text_black_most"/>
    <ListView
        android:id="@+id/lv_paytype"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:divider="@color/transparency"></ListView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_common_appthmebutton"
        android:text="@string/cloudrecharge_submit"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
</LinearLayout>