<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include layout="@layout/layout_titlebar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:text="@string/usehelp_Q_1"
                style="@style/usehelp_q_style"/>
            <LinearLayout
                style="@style/usehelp_answer_background_style">
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_1"/>
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_2"/>
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_3"/>
            </LinearLayout>
            <TextView
                android:text="@string/usehelp_Q_1"
                style="@style/usehelp_q_style"/>
            <LinearLayout
                style="@style/usehelp_answer_background_style">
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_1"/>
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_2"/>
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_3"/>
            </LinearLayout>
            <TextView
                android:text="@string/usehelp_Q_1"
                style="@style/usehelp_q_style"/>
            <LinearLayout
                style="@style/usehelp_answer_background_style">
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_1"/>
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_2"/>
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_3"/>
            </LinearLayout>
            <TextView
                android:text="@string/usehelp_Q_1"
                style="@style/usehelp_q_style"/>
            <LinearLayout
                style="@style/usehelp_answer_background_style">
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_1"/>
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_2"/>
                <TextView
                    style="@style/usehelp_answertext_style"
                    android:text="@string/usehelp_a_1_3"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>