<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_background_gray">
    <include layout="@layout/layout_titlebar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/settings_city"
            android:textSize="14dp"
            android:textColor="@color/comon_text_black_most"
            android:layout_marginLeft="17dp"/>
        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:textColor="@color/comon_text_black_less"
            android:layout_centerVertical="true"
            android:text="@string/settings_city_info"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/settings_version"
            android:textSize="14dp"
            android:textColor="@color/comon_text_black_most"
            android:layout_marginLeft="17dp"/>
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:textColor="@color/comon_text_black_less"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <View
        android:layout_width="16dp"
        android:layout_height="1dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:id="@+id/rl_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:clickable="true"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="清除缓存"
            android:textSize="14dp"
            android:textColor="@color/comon_text_black_most"
            android:layout_marginLeft="17dp"/>
        <TextView
            android:id="@+id/tv_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:textColor="@color/app_theme"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <View
        android:layout_width="16dp"
        android:layout_height="1dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:id="@+id/rl_update"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:clickable="true"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/settings_update"
            android:textSize="14dp"
            android:textColor="@color/comon_text_black_most"
            android:layout_marginLeft="17dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_cancel_login"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="退出登录"
        android:textColor="@color/comon_text_black_less"
        android:textSize="15dp"
        android:gravity="center"
        android:clickable="true"/>
</LinearLayout>