<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <include layout="@layout/layout_titlebar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/app_theme"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:background="@color/common_background_gray"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/shape_whitecard">
            <LinearLayout
                android:id="@+id/ll_inputsearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/aty_realtimebussearch_search"
                    android:layout_gravity="center_vertical"/>
                <EditText
                    android:id="@+id/et_input"
                    android:hint="@string/login_please_inputphone"
                    android:layout_weight="1"
                    style="@style/input_editext_hinit_style"/>
                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:text="@string/realtimebussearch_cancel"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:textColor="@color/app_theme"
                    android:src="@drawable/aty_login_deletephone"
                    android:layout_marginRight="12dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_below="@id/ll_inputsearch"
                android:background="@color/common_line_gray_onepx"
                android:layout_marginTop="7dp"/>
            <Button
                android:id="@+id/btn_query"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:background="@drawable/shape_aty_common_nextbutton"
                android:text="@string/realtimebussearch_query"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:textSize="13dp"
                style="?android:attr/borderlessButtonStyle"/>
        </RelativeLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_deletehistory"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/common_background_gray"
        android:text="@string/realtimebussearch_deletehistory"
        android:textColor="@color/app_theme"
        android:gravity="center_vertical"
        android:paddingLeft="17dp"
        android:drawableLeft="@drawable/aty_realtimebussearch_deletehistory"
        android:drawablePadding="6dp"/>
    <ListView
        android:id="@+id/lv_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>